--- a/templates/App_Dashboard/superadminmenu.html
+++ b/templates/App_Dashboard/superadminmenu.html
@@ -1,20 +1,10 @@
 <a href="{% url 'App_Account:dashboard'%}"
-    class="list-group-item list-group-item-action bg-transparent second-text active"><i
-        class="fas fa-tachometer-alt me-2"></i>Dashboard</a>
+        class="list-group-item list-group-item-action bg-transparent second-text active"><i
+                class="fas fa-tachometer-alt me-2"></i>Dashboard</a>
+<a href="{% url 'App_Account:pendingrentlist'%}"
+        class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
+                class="fas fa-chart-line me-2"></i>Pending Rent Post</a>
 <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
-        class="fas fa-user me-2"></i>Profile</a>
-
-<a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
-        class="fas fa-chart-line me-2"></i>{{request.user.userprofile.userType}}</a>
-<a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
-        class="fas fa-paperclip me-2"></i>Reports</a>
-<a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
-        class="fas fa-shopping-cart me-2"></i>Store Mng</a>
-<a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
-        class="fas fa-gift me-2"></i>Products</a>
-<a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
-        class="fas fa-comment-dots me-2"></i>Chat</a>
-<a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
-        class="fas fa-map-marker-alt me-2"></i>Outlet</a>
+                class="fas fa-paperclip me-2"></i>Rented Reports</a>
 <a href="#" class="list-group-item list-group-item-action bg-transparent text-danger fw-bold"><i
-        class="fas fa-power-off me-2"></i>Logout</a>
+                class="fas fa-power-off me-2"></i>Logout</a>
