--- a/templates/details.html
+++ b/templates/details.html
@@ -14,8 +14,6 @@ EasyRent - details page
         background-color: #f5f5f5;
     }
 
-    /* Blog 
----------------------*/
     .blog-grid {
         box-shadow: 0 0 30px rgba(31, 45, 61, 0.125);
         border-radius: 5px;
@@ -190,20 +188,6 @@ EasyRent - details page
         margin-right: 10px;
     }
 
-    .tag-cloud a {
-        padding: 4px 15px;
-        font-size: 13px;
-        color: #ffffff;
-        background: #20247b;
-        border-radius: 3px;
-        margin-right: 4px;
-        margin-bottom: 4px;
-    }
-
-    .tag-cloud a:hover {
-        background: #fc5356;
-    }
-
     .blog-single {
         padding-top: 30px;
         padding-bottom: 30px;
@@ -278,47 +262,6 @@ EasyRent - details page
         margin-bottom: 15px;
     }
 
-    .article .article-content blockquote {
-        max-width: 600px;
-        padding: 15px 0 30px 0;
-        margin: 0;
-    }
-
-    .article .article-content blockquote p {
-        font-size: 20px;
-        font-weight: 500;
-        color: #fc5356;
-        margin: 0;
-    }
-
-    .article .article-content blockquote .blockquote-footer {
-        color: #20247b;
-        font-size: 16px;
-    }
-
-    .article .article-content blockquote .blockquote-footer cite {
-        font-weight: 600;
-    }
-
-    .article .tag-cloud {
-        padding-top: 10px;
-    }
-
-    .article-comment {
-        box-shadow: 0 0 30px rgba(31, 45, 61, 0.125);
-        border-radius: 5px;
-        overflow: hidden;
-        background: #ffffff;
-        padding: 20px;
-    }
-
-    .article-comment h4 {
-        color: #20247b;
-        font-weight: 700;
-        margin-bottom: 25px;
-        font-size: 22px;
-    }
-
     img {
         max-width: 100%;
     }
@@ -326,76 +269,6 @@ EasyRent - details page
     img {
         vertical-align: middle;
         border-style: none;
-    }
-
-    /* Contact Us
----------------------*/
-    .contact-name {
-        margin-bottom: 30px;
-    }
-
-    .contact-name h5 {
-        font-size: 22px;
-        color: #20247b;
-        margin-bottom: 5px;
-        font-weight: 600;
-    }
-
-    .contact-name p {
-        font-size: 18px;
-        margin: 0;
-    }
-
-    .social-share a {
-        width: 40px;
-        height: 40px;
-        line-height: 40px;
-        border-radius: 50%;
-        color: #ffffff;
-        text-align: center;
-        margin-right: 10px;
-    }
-
-    .social-share .dribbble {
-        box-shadow: 0 8px 30px -4px rgba(234, 76, 137, 0.5);
-        background-color: #ea4c89;
-    }
-
-    .social-share .behance {
-        box-shadow: 0 8px 30px -4px rgba(0, 103, 255, 0.5);
-        background-color: #0067ff;
-    }
-
-    .social-share .linkedin {
-        box-shadow: 0 8px 30px -4px rgba(1, 119, 172, 0.5);
-        background-color: #0177ac;
-    }
-
-    .contact-form .form-control {
-        border: none;
-        border-bottom: 1px solid #20247b;
-        background: transparent;
-        border-radius: 0;
-        padding-left: 0;
-        box-shadow: none !important;
-    }
-
-    .contact-form .form-control:focus {
-        border-bottom: 1px solid #fc5356;
-    }
-
-    .contact-form .form-control.invalid {
-        border-bottom: 1px solid #ff0000;
-    }
-
-    .contact-form .send {
-        margin-top: 20px;
-    }
-
-    @media (max-width: 767px) {
-        .contact-form .send {
-            margin-bottom: 20px;
-        }
     }
 
     .section-title h2 {
@@ -411,71 +284,21 @@ EasyRent - details page
         padding-bottom: 45px;
     }
 
-    .contact-form .send {
-        margin-top: 20px;
-    }
-
-    .px-btn {
-        padding: 0 50px 0 20px;
-        line-height: 60px;
-        position: relative;
-        display: inline-block;
-        color: #20247b;
-        background: none;
-        border: none;
-    }
-
-    .px-btn:before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        display: block;
-        border-radius: 30px;
-        background: transparent;
-        border: 1px solid rgba(252, 83, 86, 0.6);
-        border-right: 1px solid transparent;
-        -moz-transition: ease all 0.35s;
-        -o-transition: ease all 0.35s;
-        -webkit-transition: ease all 0.35s;
-        transition: ease all 0.35s;
-        width: 60px;
-        height: 60px;
-    }
-
-    .px-btn .arrow {
-        width: 13px;
-        height: 2px;
-        background: currentColor;
-        display: inline-block;
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        margin: auto;
-        right: 25px;
-    }
-
-    .px-btn .arrow:after {
-        width: 8px;
-        height: 8px;
-        border-right: 2px solid currentColor;
-        border-top: 2px solid currentColor;
-        content: "";
-        position: absolute;
-        top: -3px;
-        right: 0;
-        display: inline-block;
-        -moz-transform: rotate(45deg);
-        -o-transform: rotate(45deg);
-        -ms-transform: rotate(45deg);
-        -webkit-transform: rotate(45deg);
-        transform: rotate(45deg);
-    }
-
     .sg-img {
         width: 125px;
         overflow: hidden;
         border: 2px solid #fea116;
+        cursor: pointer;
+    }
+
+    .sg-img.selected {
+        border: 2px solid rgb(9, 165, 69);
+    }
+
+    .blockquote img {
+        width: 40px;
+        height: 40px;
+        border-radius: 20px;
     }
 </style>
 {% endblock %}
@@ -486,15 +309,14 @@ EasyRent - details page
         <div class="row align-items-start">
             <div class="col-lg-8 m-15px-tb">
                 <article class="article">
-                    <div class="article-img">
+                    <div class="article-img" id="topImg">
                         <img src="{{rent.images.all.0.image.url}}" class="w-100" title="" alt="">
                     </div>
                     <div class="img-list my-4">
-                        <div class="d-flex flex-wrap gap-2">
+                        <div class="d-flex flex-wrap gap-2" id="image-container">
                             {% for image in rent.images.all %}
                             <div class="sg-img">
-                                <a href="javascript:void(0);">
-                                    <img src="{{ image.image.url }}" alt="image description"></a>
+                                <img src="{{ image.image.url }}" class="clsImage" alt="image description">
                             </div>
                             {% endfor %}
                         </div>
@@ -533,138 +355,88 @@ EasyRent - details page
                         </div>
 
                     </div>
+                    <div class="scope-comment-section">
+                        {% include 'comment_section.html' %}
+                    </div>
+                    <div class="stripe-payment">
+                        <form action="{% url 'checkout' %}" method="post" id="payment-form">
+                            {% csrf_token %}
+                            <div class="form-row">
+                                <label for="card-element">
+                                    Credit or debit card
+                                </label>
+                                <div id="card-element">
+                                    <!-- A Stripe Element will be inserted here. -->
+                                </div>
+                                <!-- Used to display form errors. -->
+                                <div id="card-errors" role="alert"></div>
+                            </div>
+                            <button class="btn btn-success">Submit Payment</button>
+                        </form>
+                    </div>
                 </article>
-                <div class="contact-form article-comment">
-                    <h4>Leave a Reply</h4>
-                    <form id="contact-form" method="POST">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <input name="Name" id="name" placeholder="Name *" class="form-control" type="text">
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <input name="Email" id="email" placeholder="Email *" class="form-control"
-                                        type="email">
-                                </div>
-                            </div>
-                            <div class="col-md-12">
-                                <div class="form-group">
-                                    <textarea name="message" id="message" placeholder="Your message *" rows="4"
-                                        class="form-control"></textarea>
-                                </div>
-                            </div>
-                            <div class="col-md-12">
-                                <div class="send">
-                                    <button class="px-btn theme"><span>Submit</span> <i class="arrow"></i></button>
-                                </div>
-                            </div>
-                        </div>
-                    </form>
-                </div>
+
             </div>
             <div class="col-lg-4 m-15px-tb blog-aside">
                 <div class="widget widget-latest-post">
                     <div class="widget-title">
-                        <h3>Latest Post</h3>
+                        <h3>Related Post</h3>
                     </div>
-                    <div class="widget-body">
+                    <div class="widget-body d-flex flex-column">
+                        {% for item in relatedpost%}
                         <div class="latest-post-aside media">
                             <div class="lpa-left media-body">
-                                <div class="lpa-title">
-                                    <h5><a href="#">Prevent 75% of visitors from google analytics</a></h5>
+                                <div class="">
+                                    <h5><a href="{% url 'details' item.id %}">{{item.title}}</a></h5>
                                 </div>
                                 <div class="lpa-meta">
                                     <a class="name" href="#">
-                                        Rachel Roth
+                                        {{item.owner}}
                                     </a>
                                     <a class="date" href="#">
-                                        26 FEB 2020
+                                        {{item.created}}
                                     </a>
                                 </div>
                             </div>
-                            <div class="lpa-right">
-                                <a href="#">
-                                    <img src="https://www.bootdey.com/image/400x200/FFB6C1/000000" title="" alt="">
-                                </a>
+                            <div class="lpa-right w-100">
+                                <img src="{{item.images.all.0.image.url}}" class="w-100" title="" alt="">
                             </div>
                         </div>
-                        <div class="latest-post-aside media">
-                            <div class="lpa-left media-body">
-                                <div class="lpa-title">
-                                    <h5><a href="#">Prevent 75% of visitors from google analytics</a></h5>
-                                </div>
-                                <div class="lpa-meta">
-                                    <a class="name" href="#">
-                                        Rachel Roth
-                                    </a>
-                                    <a class="date" href="#">
-                                        26 FEB 2020
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="lpa-right">
-                                <a href="#">
-                                    <img src="https://www.bootdey.com/image/400x200/FFB6C1/000000" title="" alt="">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="latest-post-aside media">
-                            <div class="lpa-left media-body">
-                                <div class="lpa-title">
-                                    <h5><a href="#">Prevent 75% of visitors from google analytics</a></h5>
-                                </div>
-                                <div class="lpa-meta">
-                                    <a class="name" href="#">
-                                        Rachel Roth
-                                    </a>
-                                    <a class="date" href="#">
-                                        26 FEB 2020
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="lpa-right">
-                                <a href="#">
-                                    <img src="https://www.bootdey.com/image/400x200/FFB6C1/000000" title="" alt="">
-                                </a>
-                            </div>
-                        </div>
+                        {% endfor %}
                     </div>
                 </div>
-                <!-- End Latest Post -->
-                <!-- widget Tags -->
-                <div class="widget widget-tags">
-                    <div class="widget-title">
-                        <h3>Latest Tags</h3>
-                    </div>
-                    <div class="widget-body">
-                        <div class="nav tag-cloud">
-                            <a href="#">Design</a>
-                            <a href="#">Development</a>
-                            <a href="#">Travel</a>
-                            <a href="#">Web Design</a>
-                            <a href="#">Marketing</a>
-                            <a href="#">Research</a>
-                            <a href="#">Managment</a>
-                        </div>
-                    </div>
-                </div>
-                <!-- End widget Tags -->
             </div>
         </div>
     </div>
 </div>
 {% endblock %}
-<script>
-    function changeImage(element) {
-
-        var main_prodcut_image = document.getElementById('main_product_image');
-        main_prodcut_image.src = element.src;
-
-
-    }
-</script>
 
 {% block js %}
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://js.stripe.com/v3/"></script>
+<script>
+    $(document).ready(function () {
+        $(document).on('click', '.clsImage', function () {
+            $("#topImg img").attr("src", $(this).attr("src"));
+            $(".sg-img").removeClass("selected");
+            $(this).parent(".sg-img").addClass("selected");
+        });
+    });
+</script>
+<script>
+    var stripe = Stripe('pk_test_51OgtcCLCGAkvlIlNz6H8FwtAQbNS1uigVMzy6drr07FgGAtTS8Hgewk3Ov2gBGiltS0BEu34DRRbWF6G3wvm6bbX00NwQamDTm');
+    var elements = stripe.elements();
+    var cardElement = elements.create('card');
+    cardElement.mount('#card-element');
+    var cardErrors = document.getElementById('card-errors');
+
+    cardElement.addEventListener('change', function (event) {
+        if (event.error) {
+            cardErrors.textContent = event.error.message;
+        } else {
+            cardErrors.textContent = '';
+        }
+    });
+</script>
 {% endblock %}
