--- a/templates/App_Dashboard/othermenu.html
+++ b/templates/App_Dashboard/othermenu.html
@@ -5,6 +5,9 @@
 <a href="{% url 'App_Account:rentlist'%}"
         class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
                 class="fas fa-chart-line me-2"></i>Manage Post</a>
+<a href="{% url 'App_Account:rentedlist'%}"
+        class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
+                class="fas fa-chart-line me-2"></i>Rented List</a>
 {% elif request.user.userprofile.userType == "2"%}
 <a href="#" class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
                 class="fas fa-chart-line me-2"></i>Purchase List</a>
