--- a/templates/App_Dashboard/addrent.html
+++ b/templates/App_Dashboard/addrent.html
@@ -130,6 +130,13 @@ EasyRent-Add rent post
                                     placeholder="Enter advance amount" name="txtAdvance" value="">
                             </div>
                         </div>
+                        <div class="row mt-2">
+                            <div class="col-lg-6">
+                                <label for="txtRentFrom" class="form-label">Rent From</label>
+                                <input type="date" class="form-control" id="txtRentFrom" name="txtRentFrom"
+                                    value="{{current_date|date:'Y-m-d' }}" min="{{current_date|date:'Y-m-d' }}">
+                            </div>
+                        </div>
 
                         <div class="row mt-2">
                             <div class="col-lg-12">
