--- a/templates/App_Dashboard/otherdashboard.html
+++ b/templates/App_Dashboard/otherdashboard.html
@@ -5,7 +5,7 @@
                 <div class="welcome text-center">
                     <div class="content rounded-3 p-3">
                         <h1 class="fs-3">Welcome to Dashboard</h1>
-                        <p class="mb-0">Hello Jone Doe, welcome to your awesome dashboard!</p>
+                        <p class="mb-0">Hello {{request.user}}, welcome to your awesome dashboard!</p>
                     </div>
                 </div>
             </div>
