--- a/templates/App_Dashboard/purchasedetails.html
+++ b/templates/App_Dashboard/purchasedetails.html
@@ -54,6 +54,14 @@ EasyRent - details page
                             </thead>
                             <tbody>
                                 <tr>
+                                    <td>House Owner </td>
+                                    <td>{{singlerented.post.owner}}</td>
+                                </tr>
+                                <tr>
+                                    <td>House Owner Email</td>
+                                    <td>{{singlerented.post.owner.email}}</td>
+                                </tr>
+                                <tr>
                                     <td>Purchaser </td>
                                     <td>{{singlerented.user}}</td>
                                 </tr>
