--- a/templates/App_Dashboard/admindashboard.html
+++ b/templates/App_Dashboard/admindashboard.html
@@ -1,55 +1,70 @@
-<div class="container-fluid px-4">
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="p-4">
-                <div class="welcome text-center">
-                    <div class="content rounded-3 p-3">
-                        <h1 class="fs-3">Welcome to Dashboard</h1>
-                        <p class="mb-0">Hello Jone Doe, welcome to your awesome dashboard!</p>
-                    </div>
-                </div>
+<div class="row g-3 my-2">
+    <div class="col-md-3">
+        <div class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded">
+            <div>
+                <h3 class="fs-2 text-center">{{housepost}}</h3>
+                <p class="fs-5">Total Rent Post</p>
             </div>
         </div>
     </div>
-    <div class="row g-3 my-2">
-        <div class="col-md-3">
-            <div class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded">
-                <div>
-                    <h3 class="fs-2">720</h3>
-                    <p class="fs-5">Products</p>
-                </div>
-                <i class="fas fa-gift fs-1 primary-text border rounded-full secondary-bg p-3"></i>
-            </div>
-        </div>
 
-        <div class="col-md-3">
-            <div class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded">
-                <div>
-                    <h3 class="fs-2">4920</h3>
-                    <p class="fs-5">Sales</p>
-                </div>
-                <i class="fas fa-hand-holding-usd fs-1 primary-text border rounded-full secondary-bg p-3"></i>
-            </div>
-        </div>
-
-        <div class="col-md-3">
-            <div class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded">
-                <div>
-                    <h3 class="fs-2">3899</h3>
-                    <p class="fs-5">Delivery</p>
-                </div>
-                <i class="fas fa-truck fs-1 primary-text border rounded-full secondary-bg p-3"></i>
-            </div>
-        </div>
-
-        <div class="col-md-3">
-            <div class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded">
-                <div>
-                    <h3 class="fs-2">%25</h3>
-                    <p class="fs-5">Increase</p>
-                </div>
-                <i class="fas fa-chart-line fs-1 primary-text border rounded-full secondary-bg p-3"></i>
+    <div class="col-md-3">
+        <div class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded">
+            <div>
+                <h3 class="fs-2 text-center">{{approved}}</h3>
+                <p class="fs-5">Approved Post</p>
             </div>
         </div>
     </div>
+
+    <div class="col-md-3">
+        <div class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded">
+            <div>
+                <h3 class="fs-2 text-center">{{rejected}}</h3>
+                <p class="fs-5">Reject Post</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-md-3">
+        <div class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded">
+            <div>
+                <h3 class="fs-2 text-center">{{saled}}</h3>
+                <p class="fs-5">Total Rented</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-3">
+        <div class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded">
+            <div>
+                <h3 class="fs-2 text-center">{{users}}</h3>
+                <p class="fs-5">Total User</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-3">
+        <div class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded">
+            <div>
+                <h3 class="fs-2 text-center">{{houseowner}}</h3>
+                <p class="fs-5">Total HouseOwner</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-3">
+        <div class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded">
+            <div>
+                <h3 class="fs-2 text-center">{{renter}}</h3>
+                <p class="fs-5">Total Renter</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-3">
+        <div class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded">
+            <div>
+                <h3 class="fs-2 text-center">{{totalreneted}}</h3>
+                <p class="fs-5">Total Renter Amount</p>
+            </div>
+        </div>
+    </div>
+</div>
 </div>
