--- a/templates/index.html
+++ b/templates/index.html
@@ -25,11 +25,10 @@
                     <div class="p-3" style="max-width: 700px;">
                         <h6 class="section-title text-white text-uppercase mb-3 animated slideInDown">Luxury
                             Living</h6>
-                        <h1 class="display-3 text-white mb-4 animated slideInDown">Discover A Brand Luxurious
-                            Hotel</h1>
-                        <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Our
+                        <h1 class="display-3 text-white mb-4 animated slideInDown">Discover A Suitable Home</h1>
+                        <!-- <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Our
                             Rooms</a>
-                        <a href="" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Book A Room</a>
+                        <a href="" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Book A Room</a> -->
                     </div>
                 </div>
             </div>
@@ -40,11 +39,7 @@
                     <div class="p-3" style="max-width: 700px;">
                         <h6 class="section-title text-white text-uppercase mb-3 animated slideInDown">Luxury
                             Living</h6>
-                        <h1 class="display-3 text-white mb-4 animated slideInDown">Discover A Brand Luxurious
-                            Hotel</h1>
-                        <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Our
-                            Rooms</a>
-                        <a href="" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Book A Room</a>
+                        <h1 class="display-3 text-white mb-4 animated slideInDown">Find Apartment Reasonable Price</h1>
                     </div>
                 </div>
             </div>
