--- a/templates/base.html
+++ b/templates/base.html
@@ -76,8 +76,8 @@
                 <div class="copyright">
                     <div class="row">
                         <div class="col-md-12 text-center mb-3 mb-md-0">
-                            &copy; <a class="border-bottom" href="#">Your Site Name</a>, All Right Reserved.
-                            Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
+                            &copy;EasyRent, All Right Reserved.
+                            Designed By Alex</a>
                         </div>
                     </div>
                 </div>
