--- a/templates/App_Dashboard/superadminmenu.html
+++ b/templates/App_Dashboard/superadminmenu.html
@@ -13,3 +13,6 @@
 <a href="{% url 'App_Account:contact'%}"
         class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
                 class="fas fa-envelope me-2"></i>Contact Message</a>
+<a href="{% url 'App_Account:userlists'%}"
+        class="list-group-item list-group-item-action bg-transparent second-text fw-bold"><i
+                class="fas fa-users me-2"></i>User List</a>
